// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) No active user 1`] = `
<span
  className="favorite-btn"
  onClick={[Function]}
>
  <button
    className="cursor-pointer rounded-full duration-300 no-wrap flex items-center justify-center gap-2 bg-blue-dark-sky hover:bg-blue-dark-sky-hover focus:bg-blue-dark-sky-active text-white disabled:opacity-50 disabled:hover:bg-blue-dark-sky disabled:focus:bg-blue-dark-sky h-[2.125rem] px-3 "
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "outline": "none",
      }
    }
    title="Add to favorites"
    type="button"
  >
    <div
      className="flex items-center w-5 h-5 undefined"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M5,15L4.4,14.5C2.4,12.6 1,11.4 1,9.9C1,8.7 2,7.7 3.2,7.7C3.9,7.7 4.6,8 5,8.5C5.4,8 6.1,7.7 6.8,7.7C8,7.7 9,8.6 9,9.9C9,11.4 7.6,12.6 5.6,14.5L5,15M15,4A4,4 0 0,0 11,8A4,4 0 0,0 15,12A4,4 0 0,0 19,8A4,4 0 0,0 15,4M15,10.1A2.1,2.1 0 0,1 12.9,8A2.1,2.1 0 0,1 15,5.9C16.16,5.9 17.1,6.84 17.1,8C17.1,9.16 16.16,10.1 15,10.1M15,13C12.33,13 7,14.33 7,17V20H23V17C23,14.33 17.67,13 15,13M21.1,18.1H8.9V17C8.9,16.36 12,14.9 15,14.9C17.97,14.9 21.1,16.36 21.1,17V18.1Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
</span>
`;

exports[`(2) Not Favorited 1`] = `
<span
  className="favorite-btn"
>
  <button
    className="cursor-pointer rounded-full duration-300 no-wrap flex items-center justify-center gap-2 bg-blue-dark-sky hover:bg-blue-dark-sky-hover focus:bg-blue-dark-sky-active text-white disabled:opacity-50 disabled:hover:bg-blue-dark-sky disabled:focus:bg-blue-dark-sky h-[2.125rem] px-3 "
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "outline": "none",
      }
    }
    title="Add to favorites"
    type="button"
  >
    <div
      className="flex items-center w-5 h-5 undefined"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M5,15L4.4,14.5C2.4,12.6 1,11.4 1,9.9C1,8.7 2,7.7 3.2,7.7C3.9,7.7 4.6,8 5,8.5C5.4,8 6.1,7.7 6.8,7.7C8,7.7 9,8.6 9,9.9C9,11.4 7.6,12.6 5.6,14.5L5,15M15,4A4,4 0 0,0 11,8A4,4 0 0,0 15,12A4,4 0 0,0 19,8A4,4 0 0,0 15,4M15,10.1A2.1,2.1 0 0,1 12.9,8A2.1,2.1 0 0,1 15,5.9C16.16,5.9 17.1,6.84 17.1,8C17.1,9.16 16.16,10.1 15,10.1M15,13C12.33,13 7,14.33 7,17V20H23V17C23,14.33 17.67,13 15,13M21.1,18.1H8.9V17C8.9,16.36 12,14.9 15,14.9C17.97,14.9 21.1,16.36 21.1,17V18.1Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
</span>
`;

exports[`(3) Favorited 1`] = `
<span
  className="favorite-btn"
>
  <button
    className="cursor-pointer rounded-full duration-300 no-wrap flex items-center justify-center gap-2 bg-blue-dark-sky hover:bg-blue-dark-sky-hover focus:bg-blue-dark-sky-active text-white disabled:opacity-50 disabled:hover:bg-blue-dark-sky disabled:focus:bg-blue-dark-sky h-[2.125rem] px-3 "
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "outline": "none",
      }
    }
    title="Remove from favorites"
    type="button"
  >
    <div
      className="flex items-center w-5 h-5 undefined"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M15,14C12.3,14 7,15.3 7,18V20H23V18C23,15.3 17.7,14 15,14M15,12A4,4 0 0,0 19,8A4,4 0 0,0 15,4A4,4 0 0,0 11,8A4,4 0 0,0 15,12M5,15L4.4,14.5C2.4,12.6 1,11.4 1,9.9C1,8.7 2,7.7 3.2,7.7C3.9,7.7 4.6,8 5,8.5C5.4,8 6.1,7.7 6.8,7.7C8,7.7 9,8.6 9,9.9C9,11.4 7.6,12.6 5.6,14.5L5,15Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
</span>
`;
